# trading-shared

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/prompts/: make-pure-working-plan  unit-test.md
src/trading_shared/cache/: universe_cache.py
src/trading_shared/clients/: api_client_deprecated.py  deribit_api_client.py  postgres_client.py  prompt_for audit_redis-examples.md  prompt_for audit_redis.md  redis_client.py  single_resp_viol.md
src/trading_shared/clients/prompts/: make-psql-pure  make-pure-all-prompts  make-redis-pure  prompt_for audit_redis-examples.md
src/trading_shared/config/: models.py  universe_config.py
src/trading_shared/core/: enums.py  models.py  risk.py
src/trading_shared/core/ohlc/: __init__.py  transformer.py
src/trading_shared/exchange/public/: base.py  base_client.py  binance.py  binance_client_legacy.py  client_map.py  deribit.py
src/trading_shared/exchanges/: mappers.py  transformers.py
src/trading_shared/notifications/: manager.py  models.py  telegram_client.py
src/trading_shared/repositories/: hybrid_market_data_repository.py  instrument_repository.py  market_data_repository.py  ohlc_queue_repository.py  ohlc_repository.py  options_repository.py  order_repository.py  stream_processor_repository.py  system_repository.py  system_state_manager.py  system_state_repository.py  ticker_repository.py  tradable_asset_repository.py  trade_repository.py  universe_repository.py
src/trading_shared/risk/: models.py  pme_calculator.py
src/trading_shared/utils/: FAIL_FAST_GUIDE.md  asset_utils.py  constants.py  fail_fast.py  formatter.py  healthcheck.py  healthcheck_script.py  identity.py  labelling.py  resource_manager.py  runner.md
tests/: conftest.py
tests/trading_shared/: __init__.py
tests/trading_shared/cache/: __init__.py  test_universe_cache.py
tests/trading_shared/clients/: __init__.py  test_postgres_client.py  test_redis_client.py
tests/trading_shared/config/: __init__.py  test_models.py  test_universe_config.py
tests/trading_shared/exchanges/: test_mappers.py  test_transformers.py
tests/trading_shared/notifications/: __init__.py  test_models.py
tests/trading_shared/repositories/: __init__.py  test_ohlc_repository.py  test_system_state_repository.py
tests/trading_shared/risk/: __init__.py  test_models.py  test_pme_calculator.py
tests/trading_shared/utils/: __init__.py  test_asset_utils.py  test_constants.py  test_fail_fast.py  test_healthcheck.py  test_identity.py  test_labelling.py  test_resource_manager.py
tests/unit/shared/: README.md  __init__.py  test_asset_utils.py  test_binance_websocket.py  test_constants.py  test_fail_fast.py  test_healthcheck.py  test_identity.py  test_labelling.py  test_mappers.py  test_notification_models.py  test_pme_calculator.py  test_risk_models.py  test_transformers.py  test_universe_cache.py  test_universe_config.py
(+21 files in other folders)
