# pyproject.toml

[project]
name = "trading-shared"
version = "0.7.0"
description = "Consolidated shared clients and utilities for the trading platform."

dependencies = [
    "aiohttp==3.13.2",
    "asyncpg==0.30.0",
    "loguru==0.7.2",
    "orjson==3.11.4",
    "redis==7.1.0",
    "websockets==15.0.1",  
    "trading-engine-core @ git+https://github.com/venoajie/trading-engine-core.git@v0.2.4"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
