## pyproject.toml

[project]
name = "trading-shared"
version = "0.11.37"
description = "Consolidated shared clients and utilities for the trading platform"

dependencies = [
    "aiohttp==3.13.2",
    "asyncpg==0.30.0",
    "loguru==0.7.2",
    "orjson==3.11.4",
    "redis==7.1.0",
    "websockets==15.0.1",  
    "tenacity==9.1.2",
    "trading-engine-core @ git+https://github.com/venoajie/trading-engine-core.git@v0.3.7"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


# Defines optional dependencies for development, testing, and releasing.
# These are installed by `pip install -e .[dev]` in the CI pipeline.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4",
    "build>=1.0",
]


# Configuration for the Ruff linter and formatter.
[tool.ruff]
line-length = 150
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Configuration for Pytest.
[tool.pytest.ini_options]
# pythonpath: critical for 'src' layout to allow 'import trading_shared'
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
# asyncio_mode: auto-detects async tests
asyncio_mode = "auto"